WF-48681 - Update getting started for Windows Forms Updated the getting started page for Windows Forms in DocIO UG documentation.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -58,6 +58,9 @@
             <li>
                 <a href="/file-formats/DocIO/Create-Word-document-in-Xamarin">Xamarin</a>
             </li>
+			<li>
+                <a href="/file-formats/DocIO/Create-Word-document-in-Windows-Forms">Windows Forms</a>
+            </li>
             <li>
                 <a href="/file-formats/DocIO/UWP">UWP</a>
             </li>
