--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -61,6 +61,9 @@
 			<li>
                 <a href="/file-formats/DocIO/Create-Word-document-in-Windows-Forms">Windows Forms</a>
             </li>
+			<li>
+                <a href="/file-formats/DocIO/Create-Word-document-in-WPF">WPF</a>
+            </li>
             <li>
                 <a href="/file-formats/DocIO/UWP">UWP</a>
             </li>
