WF-48633 - Update getting started for UWP   Updated the getting started page for UWP in DocIO UG documentation.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -65,7 +65,7 @@
                 <a href="/file-formats/DocIO/Create-Word-document-in-WPF">WPF</a>
             </li>
             <li>
-                <a href="/file-formats/DocIO/UWP">UWP</a>
+                <a href="/file-formats/DocIO/Create-Word-document-in-UWP">UWP</a>
             </li>
             <li>
                 <a href="/file-formats/DocIO/Silverlight">Silverlight</a>
