--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -276,6 +276,9 @@
             <li>
                 <a href="/file-formats/Presentation/Working-with-Slide">Working with Slides</a>
             </li>
+			<li>
+                <a href="/file-formats/Presentation/Working-with-LayoutSlide">Access Master and Layout Slides</a>
+            </li>
             <li>
                 <a href="/file-formats/Presentation/Working-with-paragraphs">Working with Paragraphs</a>
             </li>
