DOCINFRA-1963 added the release notes MD file and corresponding node entry in the TOC.html file  for the release notes version v16.4.0.54

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -410,6 +410,7 @@
      <li>
         Release Notes
         <ul>
+		<li> <a href = "/file-formats/release-notes/v16.4.0.54">v16.4.0.54</a></li>
 		<li> <a href = "/file-formats/release-notes/v16.4.0.53">v16.4.0.53</a></li>
 		<li> <a href = "/file-formats/release-notes/v16.4.0.52">v16.4.0.52</a></li>
 		<li> <a href = "/file-formats/release-notes/v16.4.0.48">v16.4.0.48</a></li>
