[WF-47998]- to update the ZUGFeRD md file link changes

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -222,6 +222,7 @@
             <li><a href="/file-formats/pdf/working-with-tagged-pdf">Working with Tagged PDF</a></li>
             <li><a href="/file-formats/pdf/working-with-compression">Working with Compression</a></li>
             <li><a href="/file-formats/pdf/Working-with-PDF-Conformance">Working with PDF Conformance</a></li>
+			<li><a href="/file-formats/pdf/Working-with-ZUGFeRD-Invoice-Standard">Working with ZUGFeRD Invoice Standard</a></li>
             <li><a href="/file-formats/pdf/working-with-metadata">Working with Metadata</a></li>
             <li><a href="/file-formats/pdf/working-with-colorspace">Working with Color Spaces</a></li>	
             <li><a href="/file-formats/pdf/working-with-JavaScript">Working with JavaScript</a></li>			
