--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -412,6 +412,7 @@
      <li>
         Release Notes
         <ul>
+		<li> <a href = "/file-formats/release-notes/v17.1.0.48">v17.1.0.48</a></li>
 		<li> <a href = "/file-formats/release-notes/v17.1.0.47">v17.1.0.47</a></li>
 		<li> <a href = "/file-formats/release-notes/v17.1.0.44">v17.1.0.44</a></li>
 		<li> <a href = "/file-formats/release-notes/v17.1.0.43">v17.1.0.43</a></li>
