[WF]:WF-50421- Added toc link for Shapes

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -94,6 +94,9 @@
             <li>
                 <a href="/file-formats/DocIO/Working-with-Fields">Working with Fields</a>
             </li>
+			<li>
+                <a href="/file-formats/DocIO/Working-with-Shapes">Working with Shapes</a>
+            </li>
             <li>
                 <a href="/file-formats/DocIO/Working-with-MailMerge">Working with MailMerge</a>
             </li>
