WF-51458 - Modify getting started of DocIO Fix Details:  Updated blazor in toc file.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -66,6 +66,9 @@
             </li>
             <li>
                 <a href="/file-formats/DocIO/Getting-Started/Create-Word-document-in-UWP">UWP</a>
+            </li>
+            <li>
+                <a href="/file-formats/DocIO/Getting-Started/Blazor">Blazor</a>
             </li>            
             <li>
                 <a href="/file-formats/DocIO/Working-with-Word-document">Working with Word Document</a>
