--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -351,15 +351,17 @@
             <li><a href="/file-formats/xlsio/assemblies-required">Assemblies Required</a></li>
             <li><a href="/file-formats/xlsio/NuGet-Packages-Required">NuGet Packages Required</a></li>
             <li><a href="/file-formats/xlsio/getting-started">Getting Started</a></li>
+			<ul>
+				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-core-c-sharp">ASP.NET Core</a></li>
+				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-mvc-c-sharp">ASP.NET MVC</a></li>
+				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-c-sharp">ASP.NET</a></li>
+				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-blazor-c-sharp">Blazor</a></li>
+				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-xamarin-c-sharp">Xamarin</a></li>
+				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-windows-forms-c-sharp">Windows Forms</a></li>
+				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-wpf-c-sharp">WPF</a></li>
+				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-uwp-c-sharp">UWP</a></li>
+			</ul>
             <li><a href="/file-formats/xlsio/loading-and-saving-workbook">Loading and Saving Workbook</a></li>
-            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-c-sharp">ASP.NET</a></li>
-            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-mvc-c-sharp">ASP.NET MVC</a></li>
-            <li><a href="/file-formats/xlsio/silverlight">Silverlight</a></li>
-            <li><a href="/file-formats/xlsio/winrt">WinRT</a></li>
-            <li><a href="/file-formats/xlsio/windows-phone">Windows Phone</a></li>
-            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-uwp-c-sharp">UWP</a></li>
-            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-xamarin-c-sharp">Xamarin</a></li>
-            <li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-core-c-sharp">ASP.NET Core</a></li>
             <li><a href="/file-formats/xlsio/working-with-excel-worksheet">Working with Excel Worksheet</a></li>
             <li><a href="/file-formats/xlsio/worksheet-rows-and-columns-manipulation">Worksheet Rows and Columns Manipulation</a></li>
             <li><a href="/file-formats/xlsio/worksheet-cells-manipulation">Worksheet Cells Manipulation</a></li>
