--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -334,7 +334,7 @@
             <li><a href="/file-formats/xlsio/overview">Overview</a></li>
             <li><a href="/file-formats/xlsio/assemblies-required">Assemblies Required</a></li>
             <li><a href="/file-formats/xlsio/NuGet-Packages-Required">NuGet Packages Required</a></li>
-            <li><a href="/file-formats/xlsio/getting-started">Getting Started</a></li>
+            <li><a href="/file-formats/xlsio/getting-started">Getting Started</a>
 			<ul>
 				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-core-c-sharp">ASP.NET Core</a></li>
 				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-mvc-c-sharp">ASP.NET MVC</a></li>
@@ -345,6 +345,7 @@
 				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-wpf-c-sharp">WPF</a></li>
 				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-uwp-c-sharp">UWP</a></li>
 			</ul>
+			</li>
             <li><a href="/file-formats/xlsio/loading-and-saving-workbook">Loading and Saving Workbook</a></li>
             <li><a href="/file-formats/xlsio/working-with-excel-worksheet">Working with Excel Worksheet</a></li>
             <li><a href="/file-formats/xlsio/worksheet-rows-and-columns-manipulation">Worksheet Rows and Columns Manipulation</a></li>
