Updated the PDF UG getting started and FT pages

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -170,18 +170,18 @@
             <li><a href="/file-formats/pdf/overview">Overview</a></li>
             <li><a href="/file-formats/pdf/Assemblies-Required">Assemblies Required</a></li>
             <li><a href="/file-formats/pdf/NuGet-Packages-Required">NuGet Packages Required</a></li>
-            <li><a href="/file-formats/pdf/getting-started">Getting Started</a></li>
-            <li><a href="/file-formats/pdf/Loading-and-Saving-document">Loading and Saving Document</a></li>
-            <li><a href="/file-formats/pdf/working-with-asp">ASP.NET</a></li>
-            <li><a href="/file-formats/pdf/asp-net-core">ASP.NET Core</a></li>
-            <li><a href="/file-formats/pdf/working-with-mvc">ASP.NET MVC</a></li>
-            <li><a href="/file-formats/pdf/working-with-silverlight">Silverlight</a></li>
-            <li><a href="/file-formats/pdf/UWP">UWP</a></li>
-            <li><a href="/file-formats/pdf/windows-forms">Windows Forms</a></li>
-            <li><a href="/file-formats/pdf/working-with-windows-phone">Windows Phone</a></li>
-            <li><a href="/file-formats/pdf/working-with-winrt">WinRT</a></li>
-            <li><a href="/file-formats/pdf/wpf">WPF</a></li>
-            <li><a href="/file-formats/pdf/working-with-xamarin">Xamarin</a></li>
+            <li><a href="/file-formats/pdf/getting-started">Getting Started</a>
+				<ul>
+					<li><a href="/file-formats/pdf/asp-net-core">ASP.NET Core</a></li>
+					<li><a href="/file-formats/pdf/working-with-mvc">ASP.NET MVC</a></li>
+					<li><a href="/file-formats/pdf/working-with-asp">ASP.NET</a></li>
+					<li><a href="/file-formats/pdf/working-with-xamarin">Xamarin</a></li>
+					<li><a href="/file-formats/pdf/UWP">UWP</a></li>
+					<li><a href="/file-formats/pdf/wpf">WPF</a></li>
+					<li><a href="/file-formats/pdf/windows-forms">Windows Forms</a></li>
+				</ul>
+			</li>
+			<li><a href="/file-formats/pdf/Loading-and-Saving-document">Loading and Saving Document</a></li>
             <li><a href="/file-formats/pdf/working-with-document">Working with Document</a></li>
             <li><a href="/file-formats/pdf/working-with-pages">Working with Pages</a></li>
             <li><a href="/file-formats/pdf/working-with-text">Working with Text</a></li>
