Reverted other control changes

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -170,18 +170,18 @@
             <li><a href="/file-formats/pdf/overview">Overview</a></li>
             <li><a href="/file-formats/pdf/Assemblies-Required">Assemblies Required</a></li>
             <li><a href="/file-formats/pdf/NuGet-Packages-Required">NuGet Packages Required</a></li>
-            <li><a href="/file-formats/pdf/getting-started">Getting Started</a>
-				<ul>
-					<li><a href="/file-formats/pdf/asp-net-core">ASP.NET Core</a></li>
-					<li><a href="/file-formats/pdf/working-with-mvc">ASP.NET MVC</a></li>
-					<li><a href="/file-formats/pdf/working-with-asp">ASP.NET</a></li>
-					<li><a href="/file-formats/pdf/working-with-xamarin">Xamarin</a></li>
-					<li><a href="/file-formats/pdf/UWP">UWP</a></li>
-					<li><a href="/file-formats/pdf/wpf">WPF</a></li>
-					<li><a href="/file-formats/pdf/windows-forms">Windows Forms</a></li>
-				</ul>
-			</li>
-			<li><a href="/file-formats/pdf/Loading-and-Saving-document">Loading and Saving Document</a></li>
+            <li><a href="/file-formats/pdf/getting-started">Getting Started</a></li>
+            <li><a href="/file-formats/pdf/Loading-and-Saving-document">Loading and Saving Document</a></li>
+            <li><a href="/file-formats/pdf/working-with-asp">ASP.NET</a></li>
+            <li><a href="/file-formats/pdf/asp-net-core">ASP.NET Core</a></li>
+            <li><a href="/file-formats/pdf/working-with-mvc">ASP.NET MVC</a></li>
+            <li><a href="/file-formats/pdf/working-with-silverlight">Silverlight</a></li>
+            <li><a href="/file-formats/pdf/UWP">UWP</a></li>
+            <li><a href="/file-formats/pdf/windows-forms">Windows Forms</a></li>
+            <li><a href="/file-formats/pdf/working-with-windows-phone">Windows Phone</a></li>
+            <li><a href="/file-formats/pdf/working-with-winrt">WinRT</a></li>
+            <li><a href="/file-formats/pdf/wpf">WPF</a></li>
+            <li><a href="/file-formats/pdf/working-with-xamarin">Xamarin</a></li>
             <li><a href="/file-formats/pdf/working-with-document">Working with Document</a></li>
             <li><a href="/file-formats/pdf/working-with-pages">Working with Pages</a></li>
             <li><a href="/file-formats/pdf/working-with-text">Working with Text</a></li>
@@ -334,18 +334,7 @@
             <li><a href="/file-formats/xlsio/overview">Overview</a></li>
             <li><a href="/file-formats/xlsio/assemblies-required">Assemblies Required</a></li>
             <li><a href="/file-formats/xlsio/NuGet-Packages-Required">NuGet Packages Required</a></li>
-            <li><a href="/file-formats/xlsio/getting-started">Getting Started</a>
-			<ul>
-				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-core-c-sharp">ASP.NET Core</a></li>
-				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-mvc-c-sharp">ASP.NET MVC</a></li>
-				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-c-sharp">ASP.NET</a></li>
-				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-blazor-c-sharp">Blazor</a></li>
-				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-xamarin-c-sharp">Xamarin</a></li>
-				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-windows-forms-c-sharp">Windows Forms</a></li>
-				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-wpf-c-sharp">WPF</a></li>
-				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-uwp-c-sharp">UWP</a></li>
-			</ul>
-			</li>
+            <li><a href="/file-formats/xlsio/getting-started">Getting Started</a></li>
 			<ul>
 				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-core-c-sharp">ASP.NET Core</a></li>
 				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-mvc-c-sharp">ASP.NET MVC</a></li>
