Added the blazor server side documentation

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -175,6 +175,7 @@
 					<li><a href="/file-formats/pdf/asp-net-core">ASP.NET Core</a></li>
 					<li><a href="/file-formats/pdf/working-with-mvc">ASP.NET MVC</a></li>
 					<li><a href="/file-formats/pdf/working-with-asp">ASP.NET</a></li>
+					<li><a href="/file-formats/pdf/Create-PDF-document-in-Blazor">Blazor</a></li>
 					<li><a href="/file-formats/pdf/working-with-xamarin">Xamarin</a></li>
 					<li><a href="/file-formats/pdf/UWP">UWP</a></li>
 					<li><a href="/file-formats/pdf/wpf">WPF</a></li>
