--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -404,6 +404,7 @@
      <li>
         Release Notes
         <ul>
+		<li> <a href = "/file-formats/release-notes/v17.2.0.34">v17.2.0.34</a></li>
 		<li> <a href = "/file-formats/release-notes/v17.2.0.28">v17.2.0.28</a></li>
 		<li> <a href = "/file-formats/release-notes/v17.1.0.53">v17.1.0.53</a></li>
 		<li> <a href = "/file-formats/release-notes/v17.1.0.52">v17.1.0.52</a></li>
