--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -335,7 +335,7 @@
             <li><a href="/file-formats/xlsio/overview">Overview</a></li>
             <li><a href="/file-formats/xlsio/assemblies-required">Assemblies Required</a></li>
             <li><a href="/file-formats/xlsio/NuGet-Packages-Required">NuGet Packages Required</a></li>
-            <li><a href="/file-formats/xlsio/getting-started">Getting Started</a></li>
+            <li><a href="/file-formats/xlsio/getting-started">Getting Started</a>
 			<ul>
 				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-core-c-sharp">ASP.NET Core</a></li>
 				<li><a href="/file-formats/xlsio/create-read-edit-excel-files-in-asp-net-mvc-c-sharp">ASP.NET MVC</a></li>
