--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -403,6 +403,7 @@
      <li>
         Release Notes
         <ul>
+		<li> <a href = "/file-formats/release-notes/v17.2.0.35">v17.2.0.35</a></li>
         <li> <a href = "/file-formats/release-notes/v17.2.0.34">v17.2.0.34</a></li>    
 		<li> <a href = "/file-formats/release-notes/v17.2.0.28">v17.2.0.28</a></li>
 		<li> <a href = "/file-formats/release-notes/v17.1.0.53">v17.1.0.53</a></li>
