WF-51695 -Add more information in mail merge functionality in DocIO

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -95,6 +95,13 @@
             </li>
             <li>
                 <a href="/file-formats/DocIO/Working-with-MailMerge">Working with MailMerge</a>
+				<ul>
+					<li><a href="/file-formats/DocIO/Simple-Mail-merge">Simple Mail merge</a></li>
+					<li><a href="/file-formats/DocIO/Group-Mail-merge">Group Mail merge</a></li>
+					<li><a href="/file-formats/DocIO/Nested-group-Mail-merge">Nested Group Mail merge</a></li>
+					<li><a href="/file-formats/DocIO/Event-support-for-Mail-merge">Event support for Mail merge</a></li>
+					<li><a href="/file-formats/DocIO/Mail-merge-options">Mail merge options</a></li>
+				</ul>
             </li>
             <li>
                 <a href="/file-formats/DocIO/Working-with-Find-and-Replace">Working with Find and Replace</a>
@@ -403,7 +410,6 @@
      <li>
         Release Notes
         <ul>
-		<li> <a href = "/file-formats/release-notes/v17.2.0.39">v17.2.0.39</a></li>
 		<li> <a href = "/file-formats/release-notes/v17.2.0.36">v17.2.0.36</a></li>
 		<li> <a href = "/file-formats/release-notes/v17.2.0.35">v17.2.0.35</a></li>
         <li> <a href = "/file-formats/release-notes/v17.2.0.34">v17.2.0.34</a></li>    
