--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -409,81 +409,188 @@
     </li>
      <li>
         Release Notes
-        <ul>
-		<li> <a href = "/file-formats/release-notes/v17.2.0.39">v17.2.0.39</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.2.0.36">v17.2.0.36</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.2.0.35">v17.2.0.35</a></li>
-        <li> <a href = "/file-formats/release-notes/v17.2.0.34">v17.2.0.34</a></li>    
-		<li> <a href = "/file-formats/release-notes/v17.2.0.28">v17.2.0.28</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.53">v17.1.0.53</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.52">v17.1.0.52</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.51">v17.1.0.51</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.50">v17.1.0.50</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.49">v17.1.0.49</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.48">v17.1.0.48</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.47">v17.1.0.47</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.44">v17.1.0.44</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.43">v17.1.0.43</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.42">v17.1.0.42</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.41">v17.1.0.41</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.40">v17.1.0.40</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.38">v17.1.0.38</a></li>
-		<li> <a href = "/file-formats/release-notes/v17.1.0.32">v17.1.0.32</a></li>
-		<li> <a href = "/file-formats/release-notes/v16.4.0.54">v16.4.0.54</a></li>
-		<li> <a href = "/file-formats/release-notes/v16.4.0.53">v16.4.0.53</a></li>
-		<li> <a href = "/file-formats/release-notes/v16.4.0.52">v16.4.0.52</a></li>
-		<li> <a href = "/file-formats/release-notes/v16.4.0.48">v16.4.0.48</a></li>
-		<li><a href="/file-formats/release-notes/v16.4.0.47">v16.4.0.47</a></li>
-		<li><a href="/file-formats/release-notes/v16.4.0.46">v16.4.0.46</a></li>
-		<li><a href="/file-formats/release-notes/v16.4.0.44">v16.4.0.44</a></li>
-        <li><a href="/file-formats/release-notes/v16.4.0.42">v16.4.0.42</a></li>		
-        <li><a href="/file-formats/release-notes/v16.4.0.40">v16.4.0.40</a></li>
-		<li><a href="/file-formats/release-notes/v16.3.0.36">v16.3.0.36</a></li>
-		<li><a href="/file-formats/release-notes/v16.3.0.35">v16.3.0.35</a></li>
-		<li><a href="/file-formats/release-notes/v16.3.0.29">v16.3.0.29</a></li>
-		<li><a href="/file-formats/release-notes/v16.3.0.21">v16.3.0.21</a></li>
-        <li><a href="/file-formats/release-notes/v16.3.0.17">v16.3.0.17</a></li>
-		<li><a href="/file-formats/release-notes/v16.2.0.50">v16.2.0.50</a></li>
-		<li><a href="/file-formats/release-notes/v16.2.0.46">v16.2.0.46</a></li>
-		<li><a href="/file-formats/release-notes/v16.2.0.41">v16.2.0.41</a></li>
-        <li><a href="/file-formats/release-notes/v16.1.0.37">v16.1.0.37</a></li>  
-		<li><a href="/file-formats/release-notes/v16.1.0.32">v16.1.0.32</a></li>  
-		    <li><a href="/file-formats/release-notes/v16.1.0.26">v16.1.0.26</a></li>  
-		    <li><a href="/file-formats/release-notes/v16.1.0.24">v16.1.0.24</a> 
-		        <ul>
-                    <li><a href="/file-formats/Release-notes/migratingtov16.1.0.24">Migrating to v16.1.0.24</a></li>
-                </ul>
-            </li>
-		    <li><a href="/file-formats/release-notes/v15.4.0.20">v15.4.0.20</a></li>
-		    <li><a href="/file-formats/release-notes/v15.4.0.17">v15.4.0.17</a></li>			
-		    <li><a href="/file-formats/release-notes/v15.3.0.33">v15.3.0.33</a></li>
-		    <li><a href="/file-formats/release-notes/v15.3.0.29">v15.3.0.29</a></li>
-		    <li><a href="/file-formats/release-notes/v15.3.0.26">v15.3.0.26</a></li>
-		    <li><a href="/file-formats/release-notes/v15.2.0.46">v15.2.0.46</a></li>
-		    <li><a href="/file-formats/release-notes/v15.2.0.43">v15.2.0.43</a></li>
-		    <li><a href="/file-formats/release-notes/v15.2.0.40">v15.2.0.40</a></li>
-		    <li><a href="/file-formats/release-notes/v15.1.0.41">v15.1.0.41</a></li>
-		    <li><a href="/file-formats/release-notes/v15.1.0.37">v15.1.0.37</a></li>
-		    <li><a href="/file-formats/release-notes/v15.1.0.33">v15.1.0.33</a></li>
-		    <li><a href="/file-formats/release-notes/v14.4.0.20">v14.4.0.20</a></li>
-            <li><a href="/file-formats/release-notes/v14.4.0.15">v14.4.0.15</a></li>
-		    <li><a href="/file-formats/release-notes/v14.3.0.52">v14.3.0.52</a></li>
-            <li><a href="/file-formats/release-notes/v14.3.0.49">v14.3.0.49</a></li>				
-            <li><a href="/file-formats/release-notes/v14.2.0.32">v14.2.0.32</a></li>
-            <li><a href="/file-formats/release-notes/v14.2.0.28">v14.2.0.28</a></li>
-            <li><a href="/file-formats/release-notes/v14.2.0.26">v14.2.0.26</a></li>
-            <li><a href="/file-formats/release-notes/v14.1.0.46">v14.1.0.46</a></li>
-            <li><a href="/file-formats/release-notes/v14.1.0.41">v14.1.0.41</a></li>
-            <li><a href="/file-formats/release-notes/v13.4.0.63">v13.4.0.63</a></li>
-            <li><a href="/file-formats/release-notes/v13.4.0.58">v13.4.0.58</a></li>
-            <li><a href="/file-formats/release-notes/v13.4.0.53">v13.4.0.53</a></li>			
-			<li><a href="/file-formats/release-notes/v13.3.0.7">v13.3.0.7</a></li>
-			<li><a href="/file-formats/release-notes/v13.2.0.29">v13.2.0.29</a></li>
-			<li><a href="/file-formats/release-notes/v13.1.0.21">v13.1.0.21</a></li>
-			<li><a href="/file-formats/release-notes/v12.4.0.24">v12.4.0.24</a></li>
-			<li><a href="/file-formats/release-notes/v12.3.0.36">v12.3.0.36</a></li>
-			<li><a href="/file-formats/release-notes/v12.2.0.36">v12.2.0.36</a></li>
-			<li><a href="/file-formats/release-notes/v12.1.0.43">v12.1.0.43</a></li>
+        <ul>		
+		<li> 2019 Volume 2 - v17.2.0.*
+						<ul>
+							<li> Weekly Nuget Release 
+								<ul> 
+								    <li> <a href = "/file-formats/release-notes/v17.2.0.39">v17.2.0.39</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.2.0.36">v17.2.0.36</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.2.0.35">v17.2.0.35</a></li> 
+								</ul>
+							</li>
+							<li> <a href = "/file-formats/release-notes/v17.2.0.34">v17.2.0.34 Main Release</a></li>
+							<li> <a href = "/file-formats/release-notes/v17.2.0.28">v17.2.0.28 Beta Release</a></li>  				
+						</ul>
+					</li>
+					<li> 2019 Volume 1 - v17.1.0.*
+						<ul>
+							<li> Weekly Nuget Release 
+								<ul> 
+									<li> <a href = "/file-formats/release-notes/v17.1.0.53">v17.1.0.53</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.1.0.52">v17.1.0.52</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.1.0.51">v17.1.0.51</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.1.0.50">v17.1.0.50</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.1.0.49">v17.1.0.49</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.1.0.48">v17.1.0.48</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.1.0.44">v17.1.0.44</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.1.0.43">v17.1.0.43</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.1.0.42">v17.1.0.42</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.1.0.41">v17.1.0.41</a></li>
+									<li> <a href = "/file-formats/release-notes/v17.1.0.40">v17.1.0.40</a></li>
+								</ul>
+							</li>
+							<li> <a href = "/file-formats/release-notes/v17.1.0.47">v17.1.0.47 Service Pack Release</a></li>
+							<li> <a href = "/file-formats/release-notes/v17.1.0.38">v17.1.0.38 Main Release</a></li>
+							<li> <a href = "/file-formats/release-notes/v17.1.0.32">v17.1.0.32 Beta Release</a></li>												
+						</ul>
+					</li>
+					<li> 2018 Volume 4 - v16.4.0.*
+						<ul>
+							<li> Weekly Nuget Release 
+								<ul> 
+									<li> <a href = "/file-formats/release-notes/v16.4.0.54">v16.4.0.54</a></li>  
+									<li> <a href = "/file-formats/release-notes/v16.4.0.53">v16.4.0.53</a></li>	
+									<li> <a href = "/file-formats/release-notes/v16.4.0.48">v16.4.0.48</a></li>
+									<li><a href="/file-formats/release-notes/v16.4.0.47">v16.4.0.47</a></li>                                           
+									<li><a href="/file-formats/release-notes/v16.4.0.46">v16.4.0.46</a></li>                                            
+									<li><a href="/file-formats/release-notes/v16.4.0.44">v16.4.0.44</a></li>
+								</ul>
+							</li>     
+							<li><a href = "/file-formats/release-notes/v16.4.0.52">v16.4.0.52 Service Pack Release</a></li>
+							<li><a href="/file-formats/release-notes/v16.4.0.42">v16.4.0.42 Main Release</a></li>  
+							<li><a href="/file-formats/release-notes/v16.4.0.40">v16.4.0.40 Beta Release</a></li>  				
+						</ul>
+					</li>	
+					<li> 2018 Volume 3 - v16.3.0.*
+						<ul>
+							<li> Weekly Nuget Release 
+								<ul> 
+									<li><a href="/file-formats/release-notes/v16.3.0.36">v16.3.0.36</a></li>
+									<li><a href="/file-formats/release-notes/v16.3.0.35">v16.3.0.35</a></li>                                          
+								</ul>								
+							</li>     
+							<li><a href="/file-formats/release-notes/v16.3.0.29">v16.3.0.29 Service Pack Release</a></li>	
+                            <li><a href="/file-formats/release-notes/v16.3.0.21">v16.3.0.21 Main Release</a></li>
+                            <li><a href="/file-formats/release-notes/v16.3.0.17">v16.3.0.17 Beta Release</a></li>                                                               						
+						</ul>
+					</li>																	
+				    <li> 2018 Volume 2 - v16.2.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v16.2.0.50">v16.2.0.50 Service Pack Release</a></li> 
+                            <li><a href="/file-formats/release-notes/v16.2.0.46">v16.2.0.46 Service Pack Release</a></li>
+                            <li><a href="/file-formats/release-notes/v16.2.0.41">v16.2.0.41 Main Release</a></li>	                                                           						
+						</ul>
+				    </li>	
+				    <li> 2018 Volume 1 - v16.1.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v16.1.0.37">v16.1.0.37 Service Pack Release</a></li>
+                            <li><a href="/file-formats/release-notes/v16.1.0.32">v16.1.0.32 Service Pack Release</a></li>
+                            <li><a href="/file-formats/release-notes/v16.1.0.26">v16.1.0.26 Refesh Release</a></li>
+                            <li><a href="/file-formats/release-notes/v16.1.0.24">v16.1.0.24 Main Release</a>
+									<ul>
+										<li><a href="/file-formats/Release-notes/migratingtov16.1.0.24">Migrating to v16.1.0.24</a></li>
+									</ul>
+							</li>                                                   						
+						</ul>
+				    </li>	
+				    <li> 2017 Volume 4 - v15.4.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v15.4.0.20">v15.4.0.20 Service Pack Release</a></li>                                          
+							<li><a href="/file-formats/release-notes/v15.4.0.17">v15.4.0.17 Main Release</a></li>                                                                                            						
+						</ul>
+				    </li>	                
+                    <li> 2017 Volume 3 - v15.3.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v15.3.0.33">v15.3.0.33 Service Pack Release</a></li>
+                            <li><a href="/file-formats/release-notes/v15.3.0.29">v15.3.0.29 Service Pack Release</a></li>
+                            <li><a href="/file-formats/release-notes/v15.3.0.26">v15.3.0.26 Main Release</a></li>			
+						</ul>
+				    </li>					
+				    <li> 2017 Volume 2 - v15.2.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v15.2.0.46">v15.2.0.46 Service Pack Release</a></li>                                        
+				            <li><a href="/file-formats/release-notes/v15.2.0.43">v15.2.0.43 Service Pack Release</a></li>                                           
+							<li><a href="/file-formats/release-notes/v15.2.0.40">v15.2.0.40 Main Release</a></li>		
+						</ul>
+				    </li>
+					<li> 2017 Volume 1 - v15.1.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v15.1.0.41">v15.1.0.41 Service Pack Release</a></li>                                            
+				            <li><a href="/file-formats/release-notes/v15.1.0.37">v15.1.0.37 Service Pack Release</a></li>                                           
+				            <li><a href="/file-formats/release-notes/v15.1.0.33">v15.1.0.33 Main Release</a></li>	
+						</ul>
+				    </li>
+					<li> 2016 Volume 4 - v14.4.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v14.4.0.20">v14.4.0.20 Service Pack Release</a></li>                                            
+                            <li><a href="/file-formats/release-notes/v14.4.0.15">v14.4.0.15 Main Release</a></li>                                           
+						</ul>
+					</li>
+					<li> 2016 Volume 3 - v14.3.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v14.3.0.52">v14.3.0.52 Service Pack Release</a></li>
+                            <li><a href="/file-formats/release-notes/v14.3.0.49">v14.3.0.49 Main Release</a></li>					
+						</ul>
+					</li>
+					<li> 2016 Volume 2 - v14.2.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v14.2.0.32">v14.2.0.32 Service Pack Release</a></li>
+                            <li><a href="/file-formats/release-notes/v14.2.0.28">v14.2.0.28 Service Pack Release</a></li>
+                            <li><a href="/file-formats/release-notes/v14.2.0.26">v14.2.0.26 Main Release</a></li>
+                        </ul>
+					</li>
+					<li> 2016 Volume 1 - v14.1.0.*
+						<ul>
+							   <li><a href="/file-formats/release-notes/v14.1.0.46">v14.1.0.46 Service Pack Release</a></li>                        
+                               <li><a href="/file-formats/release-notes/v14.1.0.41">v14.1.0.41 Main Release</a></li>
+						</ul>
+					</li>
+				    <li> 2015 Volume 4 - v13.4.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v13.4.0.63">v13.4.0.63 Service Pack Release</a></li>
+							<li><a href="/file-formats/release-notes/v13.4.0.58">v13.4.0.58 Service Pack Release</a></li>
+							<li><a href="/file-formats/release-notes/v13.4.0.53">v13.4.0.53 Main Release</a></li>                       
+						</ul>
+					</li>
+					<li> 2015 Volume 3 - v13.3.0.*
+						<ul>
+							 <li><a href="/file-formats/release-notes/v13.3.0.7">v13.3.0.7 Main Release</a></li>                                           			
+						</ul>
+					</li>
+					<li> 2015 Volume 2 - v13.2.0.*
+						<ul>
+							 <li><a href="/file-formats/release-notes/v13.2.0.29">v13.2.0.29 Main Release</a></li>                                          
+                        </ul>
+					</li>
+					<li> 2015 Volume 1 - v13.1.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v13.1.0.21">v13.1.0.21 Main Release</a></li>                                           
+						</ul>
+					</li>
+					
+					<li> 2014 Volume 4 - v12.4.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v12.4.0.24">v12.4.0.24 Main Release</a></li>                                           
+						</ul>
+					</li>
+					<li> 2014 Volume 3 - v12.3.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v12.3.0.36">v12.3.0.36 Main Release</a></li>                                           
+						</ul>
+					</li>
+					<li> 2014 Volume 2 - v12.2.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v12.2.0.36">v12.2.0.36 Main Release</a></li>                                           
+						</ul>
+					</li>
+					<li> 2014 Volume 1 - v12.1.0.*
+						<ul>
+							<li><a href="/file-formats/release-notes/v12.1.0.43">v12.1.0.43 Main Release</a></li>                                           
+						</ul>
+					</li>
+		
+		
         </ul>
     </li>
 </ul>
