--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -407,13 +407,14 @@
             <li><a href="/file-formats/xlsio/faq">FAQ</a></li>
         </ul>
     </li>
-     <li>
+    <li>
         Release Notes
         <ul>		
 		<li> 2019 Volume 2 - v17.2.0.*
 						<ul>
 							<li> Weekly Nuget Release 
 								<ul> 
+								    <li> <a href = "/file-formats/release-notes/v17.2.0.40">v17.2.0.40</a></li>
 								    <li> <a href = "/file-formats/release-notes/v17.2.0.39">v17.2.0.39</a></li>
 									<li> <a href = "/file-formats/release-notes/v17.2.0.36">v17.2.0.36</a></li>
 									<li> <a href = "/file-formats/release-notes/v17.2.0.35">v17.2.0.35</a></li> 
@@ -589,8 +590,6 @@
 							<li><a href="/file-formats/release-notes/v12.1.0.43">v12.1.0.43 Main Release</a></li>                                           
 						</ul>
 					</li>
-		
-		
         </ul>
     </li>
 </ul>
