--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -94,7 +94,14 @@
                 <a href="/file-formats/DocIO/Working-with-Shapes">Working with Shapes</a>
             </li>
             <li>
-                <a href="/file-formats/DocIO/Working-with-MailMerge">Working with MailMerge</a>
+                <a href="/file-formats/DocIO/working-with-mail-merge">Working with MailMerge</a>
+				<ul>
+					<li><a href="/file-formats/DocIO/simple-mail-merge">Simple Mail merge</a></li>
+					<li><a href="/file-formats/DocIO/mail-merge-for-group">Group Mail merge</a></li>
+					<li><a href="/file-formats/DocIO/mail-merge-for-nested-groups">Nested Group Mail merge</a></li>
+					<li><a href="/file-formats/DocIO/mail-merge-events">Event support for Mail merge</a></li>
+					<li><a href="/file-formats/DocIO/mail-merge-options">Mail merge options</a></li>
+				</ul>
             </li>
             <li>
                 <a href="/file-formats/DocIO/Working-with-Find-and-Replace">Working with Find and Replace</a>
