--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -94,13 +94,13 @@
                 <a href="/file-formats/DocIO/Working-with-Shapes">Working with Shapes</a>
             </li>
             <li>
-                <a href="/file-formats/DocIO/working-with-mail-merge">Working with MailMerge</a>
+                <a href="/file-formats/DocIO/working-with-mail-merge">Working with Mail Merge</a>
 				<ul>
-					<li><a href="/file-formats/DocIO/simple-mail-merge">Simple Mail merge</a></li>
-					<li><a href="/file-formats/DocIO/mail-merge-for-group">Group Mail merge</a></li>
-					<li><a href="/file-formats/DocIO/mail-merge-for-nested-groups">Nested Group Mail merge</a></li>
-					<li><a href="/file-formats/DocIO/mail-merge-events">Event support for Mail merge</a></li>
-					<li><a href="/file-formats/DocIO/mail-merge-options">Mail merge options</a></li>
+					<li><a href="/file-formats/DocIO/mail-merge/simple-mail-merge">Simple Mail merge</a></li>
+					<li><a href="/file-formats/DocIO/mail-merge/mail-merge-for-group">Mail merge for group</a></li>
+					<li><a href="/file-formats/DocIO/mail-merge/mail-merge-for-nested-groups">Mail merge for nested groups</a></li>
+					<li><a href="/file-formats/DocIO/mail-merge/mail-merge-events">Mail merge events</a></li>
+					<li><a href="/file-formats/DocIO/mail-merge/mail-merge-options">Mail merge options</a></li>
 				</ul>
             </li>
             <li>
