--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -93,6 +93,9 @@
             <li>
                 <a href="/file-formats/DocIO/Working-with-Shapes">Working with Shapes</a>
             </li>
+			<li>
+               <a href="/file-formats/DocIO/working-with-mailmerge">Working with Mail Merge</a>
+            </li>
             <li>
                 <a href="/file-formats/DocIO/working-with-mail-merge">Working with Mail Merge</a>
 				<ul>
