Added the release notes MD file and corresponding node entry in the TOC.html file for the Weekly Nuget Release - September 3, 2019

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -413,7 +413,7 @@
 		<li> 2019 Volume 2 - v17.2.0.*
 						<ul>
 							<li> Weekly Nuget Release 
-								<ul> 
+								<ul><li><a href="/file-formats/release-notes/v17.2.0.49">v17.2.0.49</a></li> 
 									<li> <a href="/file-formats/release-notes/v17.2.0.47">v17.2.0.47</a></li>
 									<li> <a href="/file-formats/release-notes/v17.2.0.41">v17.2.0.41</a></li>
 								    <li> <a href="/file-formats/release-notes/v17.2.0.40">v17.2.0.40</a></li>
