--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -415,8 +415,9 @@
         <ul>		
 		<li> 2019 Volume 2 - v17.2.0.*
 						<ul>
-							<li> Weekly Nuget Release 
-								<ul> 
+							<li> Weekly NuGet Release 
+								<ul><li><a href="/file-formats/release-notes/v17.2.0.49">v17.2.0.49</a></li> 
+									<li> <a href="/file-formats/release-notes/v17.2.0.47">v17.2.0.47</a></li>
 									<li> <a href="/file-formats/release-notes/v17.2.0.41">v17.2.0.41</a></li>
 								    <li> <a href="/file-formats/release-notes/v17.2.0.40">v17.2.0.40</a></li>
 								    <li> <a href="/file-formats/release-notes/v17.2.0.39">v17.2.0.39</a></li>
@@ -431,7 +432,7 @@
 					</li>
 					<li> 2019 Volume 1 - v17.1.0.*
 						<ul>
-							<li> Weekly Nuget Release 
+							<li> Weekly NuGet Release 
 								<ul> 
 									<li> <a href="/file-formats/release-notes/v17.1.0.53">v17.1.0.53</a></li>
 									<li> <a href="/file-formats/release-notes/v17.1.0.52">v17.1.0.52</a></li>
@@ -453,7 +454,7 @@
 					</li>
 					<li> 2018 Volume 4 - v16.4.0.*
 						<ul>
-							<li> Weekly Nuget Release 
+							<li> Weekly NuGet Release 
 								<ul> 
 									<li> <a href="/file-formats/release-notes/v16.4.0.54">v16.4.0.54</a></li>  
 									<li> <a href="/file-formats/release-notes/v16.4.0.53">v16.4.0.53</a></li>	
@@ -470,7 +471,7 @@
 					</li>	
 					<li> 2018 Volume 3 - v16.3.0.*
 						<ul>
-							<li> Weekly Nuget Release 
+							<li> Weekly NuGet Release 
 								<ul> 
 									<li><a href="/file-formats/release-notes/v16.3.0.36">v16.3.0.36</a></li>
 									<li><a href="/file-formats/release-notes/v16.3.0.35">v16.3.0.35</a></li>                                          
