DOCINFRA-2065  release date is updated and table tag issue is resolved.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -410,7 +410,7 @@
     <li>
         Release Notes
         <ul>
-		<li>2019 volume 3 Beta Release - v17.3.0.*
+		<li>2019 Volume 3 - v17.3.0.*
 			<ul>
 				<li><a href="/file-formats/release-notes/v17.3.0.9">v17.3.0.9 Beta Release </a></li>
 			</ul>
