WF-52830 - Modify UG-SEO content in PDF

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -38,7 +38,7 @@
                 <a href="/file-formats/DocIO/NuGet-Packages-Required">NuGet Packages Required</a>
             </li>
             <li>
-                <a href="/file-formats/DocIO/Create-Word-document-in-CSharp-VB-NET">Getting Started</a>
+                <a href="/file-formats/DocIO/Create-Word-document-in-C-Sharp-VB-NET">Getting Started</a>
 				<ul>
 					<li>
 						<a href="/file-formats/DocIO/Create-Word-document-in-ASP-NET-Core">ASP.NET Core</a>
@@ -70,7 +70,7 @@
                 <a href="/file-formats/DocIO/Document-Object-Model-representation">Document Object Model representation</a>
             </li>
             <li>
-                <a href="/file-formats/DocIO/Open-and-Save-Word-document-in-CSharp-VB-NET">Loading and Saving document</a>
+                <a href="/file-formats/DocIO/Open-and-Save-Word-document-in-C-Sharp-VB-NET">Loading and Saving document</a>
             </li>
 			<li>
                 <a href="/file-formats/DocIO/Working-with-Word-document">Working with Word Document</a>
@@ -177,19 +177,19 @@
             <li><a href="/file-formats/pdf/overview">Overview</a></li>
             <li><a href="/file-formats/pdf/Assemblies-Required">Assemblies Required</a></li>
             <li><a href="/file-formats/pdf/NuGet-Packages-Required">NuGet Packages Required</a></li>
-            <li><a href="/file-formats/pdf/getting-started">Getting Started</a>
+            <li><a href="/file-formats/pdf/Create-PDF-file-in-C-Sharp-VB-NET">Getting Started</a>
 				<ul>
-					<li><a href="/file-formats/pdf/asp-net-core">ASP.NET Core</a></li>
-					<li><a href="/file-formats/pdf/working-with-mvc">ASP.NET MVC</a></li>
-					<li><a href="/file-formats/pdf/working-with-asp">ASP.NET</a></li>
+					<li><a href="/file-formats/pdf/Create-PDF-file-ASP-NET-Core">ASP.NET Core</a></li>
+					<li><a href="/file-formats/pdf/Create-PDF-file-in ASP-NET-MVC">ASP.NET MVC</a></li>
+					<li><a href="/file-formats/pdf/Create-PDF-file-in-ASP-NET-Web-Forms">ASP.NET</a></li>
 					<li><a href="/file-formats/pdf/Create-PDF-document-in-Blazor">Blazor</a></li>
-					<li><a href="/file-formats/pdf/working-with-xamarin">Xamarin</a></li>
-					<li><a href="/file-formats/pdf/UWP">UWP</a></li>
-					<li><a href="/file-formats/pdf/wpf">WPF</a></li>
-					<li><a href="/file-formats/pdf/windows-forms">Windows Forms</a></li>
+					<li><a href="/file-formats/pdf/Create-PDF-file-in-Xamarin">Xamarin</a></li>
+					<li><a href="/file-formats/pdf/Create-PDF-file-in-UWP">UWP</a></li>
+					<li><a href="/file-formats/pdf/Create-PDF-file-in-WPF">WPF</a></li>
+					<li><a href="/file-formats/pdf/Create-PDF-file-in-Windows-Forms">Windows Forms</a></li>
 				</ul>
 			</li>
-			<li><a href="/file-formats/pdf/Loading-and-Saving-document">Loading and Saving Document</a></li>
+			<li><a href="/file-formats/pdf/Open-and-Save-PDF-file-in-C-Sharp-VB-NET">Loading and Saving Document</a></li>
             <li><a href="/file-formats/pdf/working-with-document">Working with Document</a></li>
             <li><a href="/file-formats/pdf/working-with-pages">Working with Pages</a></li>
             <li><a href="/file-formats/pdf/working-with-text">Working with Text</a></li>
