--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -411,7 +411,15 @@
         Release Notes
         <ul>
 		<li>2019 Volume 3 - v17.3.0.*
-			<ul><li> Weekly Nuget Release <ul><li><a href="/file-formats/release-notes/v17.3.0.21">v17.3.0.21</a></li><li><a href="/file-formats/release-notes/v17.3.0.19">v17.3.0.19</a></li><li><a href="/file-formats/release-notes/v17.3.0.17">v17.3.0.17</a></li></ul></li><li><a href="/file-formats/release-notes/v17.3.0.14">v17.3.0.14 Main Release</a></li><li><a href="/file-formats/release-notes/v17.3.0.26">v17.3.0.26  </a></li>
+			<ul><li> Weekly Nuget Release 
+			        <ul>
+			            <li><a href="/file-formats/release-notes/v17.3.0.21">v17.3.0.21</a></li>
+			            <li><a href="/file-formats/release-notes/v17.3.0.19">v17.3.0.19</a></li>
+			            <li><a href="/file-formats/release-notes/v17.3.0.17">v17.3.0.17</a></li>
+			        </ul>
+			    </li>
+			    <li><a href="/file-formats/release-notes/v17.3.0.14">v17.3.0.14 Main Release</a></li>
+			    <li><a href="/file-formats/release-notes/v17.3.0.26">v17.3.0.26 Service Pack Release</a></li>
 				<li><a href="/file-formats/release-notes/v17.3.0.9">v17.3.0.9 Beta Release </a></li>
 			</ul>
 		</li>		
