--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -166,7 +166,7 @@
             <li><a href="/file-formats/pdf/Create-PDF-file-in-C-Sharp-VB-NET">Getting Started</a>
 				<ul>
 					<li><a href="/file-formats/pdf/Create-PDF-file-in-ASP-NET-Core">ASP.NET Core</a></li>
-					<li><a href="/file-formats/pdf/Create-PDF-file-in ASP-NET-MVC">ASP.NET MVC</a></li>
+					<li><a href="/file-formats/pdf/Create-PDF-file-in-ASP-NET-MVC">ASP.NET MVC</a></li>
 					<li><a href="/file-formats/pdf/Create-PDF-file-in-ASP-NET-Web-Forms">ASP.NET</a></li>
 					<li><a href="/file-formats/pdf/Create-PDF-document-in-Blazor">Blazor</a></li>
 					<li><a href="/file-formats/pdf/Create-PDF-file-in-Xamarin">Xamarin</a></li>
