WF-50424-Added code snippet for Autofit table

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -133,6 +133,9 @@
             <li>
                 <a href="/file-formats/DocIO/Working-With-Content-Controls">Working With Content Controls</a>
             </li>
+			<li>
+                <a href="/file-formats/DocIO/Working-with-Mathematical-Equation">Working with Mathematical Equation</a>
+            </li>
             <li>
                 <a href="/file-formats/DocIO/Accepting-or-Rejecting-Track-Changes">Accepting or Rejecting Track Changes</a>
             </li>
