WF-52688_Prepare_UG_documentation_for_Macro_support_in_XlsIO
(cherry picked from commit 2ebc86a8b3544016151a5496e8b3b16b5d748fdc)

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -359,6 +359,7 @@
             <li><a href="/file-formats/xlsio/working-with-pivot-charts">Working with Pivot Charts</a></li>
             <li><a href="/file-formats/xlsio/security">Security</a></li>
             <li><a href="/file-formats/xlsio/working-with-drawing-objects">Working with Drawing Objects</a></li>
+			<li><a href="/file-formats/xlsio/working-with-macros">Working with Macros</a></li>
             <li><a href="/File-Formats/XlsIO/Excel-to-PDF-Conversion">Excel to PDF Conversion</a></li>
 			<li><a href="/File-Formats/XlsIO/Excel-to-PDF-Converter-Settings">Excel to PDF Converter Settings</a></li>
             <li><a href="/file-formats/xlsio/worksheet-to-image-conversion">Worksheet to Image Conversion</a></li>
